# crbot-rs

./: .gitignore  Cargo.toml  README.md
docs/: new-architecture.dot  old-architecture.dot
docs/CRBot-public/: Actions.py  dqn_agent.py  requirements.txt
src/: action.rs  agent.rs  lib.rs  model.rs  util.rs
