[package]
name = "crbot-rs"
version = "0.1.0"
edition = "2024"
authors = ["Dat Nguyen <nguyenthdat@outlook.com>"]
description = "A AI bot for playing Clash Royale."
license = "MIT"

[[bin]]
name = "train"
path = "src/bin/train.rs"

[[bin]]
name = "crbot-server"
path = "src/bin/crbot.rs"

[lib]
name = "crbot"
path = "src/lib.rs"

[dependencies]
burn = { version = "0.18.0", features = [
    "accelerate",
    "autotune",
    "autodiff",
    "cuda",
    "tui",
    "metrics",
    "train",
] }
anyhow = "1.0.99"
axum = { version = "0.8.4", features = ["http2", "macros", "ws", "multipart"] }
bon = "3.7.1"
dotenvy = "0.15.7"
enigo = { version = "0.5.0", features = ["serde"] }
rand = "0.9.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "time"] }
xcap = { version = "0.6.2", features = ["image"] }
chrono = "0.4.41"
